--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-website-1",
-  "homepage": "http://jyosun-portfolio.com",
+  "homepage": "https://jyosun-portfolio.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
